Fix inaccurate padding and spacing

--- a/styles.css
+++ b/styles.css
@@ -113,15 +113,21 @@ button.main-article-button {
 
 div.new-article-list {
   background-color: var(--verydarkblue);
-  color: var(--offwhite);
   margin-top: 4rem;
   padding-top: 1.5rem;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+  padding-bottom: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 
   display:flex;
   flex-direction: column;
   gap: 2rem;
+}
+
+div.new-article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h2.new-header {
@@ -147,7 +153,7 @@ div.trending-articles {
 div.highlight-article {
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 0.8fr 2fr;
 }
 
 div.highlight-body {
@@ -156,7 +162,7 @@ div.highlight-body {
   display:flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 h2.highlight-header {
